[package]
name = "astralane-quic-client"
edition = "2021"
version = "0.0.2"

[dependencies]
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
anyhow = "1"
tracing = "0.1"

# pin to avoid edition2024 requirement on older toolchains
time = ">=0.3, <0.3.41"
